--- a/checks/templates/checks/control_event_result.html
+++ b/checks/templates/checks/control_event_result.html
@@ -17,6 +17,7 @@
                     <div class="check_list__position__delete"><a href="{% url 'delete-check-list-position' %}?control_event_position_id={{r.id}}&control_event_id={{control_event_id}}">удалить</a> </div>
                     </div>
                 {% endfor %}
+        <div class="results">Общее количество баллов: {{score}}</div>
                 <form class="check-list-form" action="{% url 'control-event' control_event_id %}" method="post">
                         {% csrf_token %}
                         {{check_list_form}}
