--- a/checks/templates/checks/index.html
+++ b/checks/templates/checks/index.html
@@ -5,12 +5,16 @@
 <html lang='ru'>
 	<head>
 	    <link href="{% static "/css/style.css" %}" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Ubuntu&display=swap" rel="stylesheet">
         <title>{{title}}</title>
 	</head>
 	<body>
-	    <div class="background">
             {% block head %}
             <div class="head">
+                <div class="logo">CHECK-LIST</div>
+                <div class="head-items">
                 <div class="head__item">
                     <a href="{% url 'start_page' %}">Главная</a>
                     </div>
@@ -22,10 +26,19 @@
                 <div class="head__item">
                     <a href="{% url 'control-event-list' %}">Проверки</a>
                 </div>
+					<div class="head__item user">
+                        {% if user.is_authenticated is False %}
+                            <a href="http://127.0.0.1:8000/accounts/login/">LOG IN</a>
+                        {% else %}
+                            <a href="{% url 'logout' %}">{{user}}</a>
+                        {% endif %}</div>
+	            </div>
             </div>
+				
             {% endblock %}
+		<div class=background>
             {% block content %}
             {% endblock %}
-	    </div>
+            </div>
 	</body>
 </html>
