--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 .head__item {
-    color: black;
+    color: #012601;
     display: inline-block;
     font-size: 20px;
     padding: 20px;
@@ -25,7 +25,7 @@ body {
     }
 
 .head {
-    background-color: #99a99a;
+    background-color: #034A02;
     text-align: center;
     display: flex;
     margin-bottom: 40px
