--- a/checks/templates/checks/object.html
+++ b/checks/templates/checks/object.html
@@ -8,7 +8,7 @@
                 {% for object in objects %}
                 <div class="content_list__item">
                     <div class="content_list__item__name">{{object.name}} {{object.location}}</div>
-                    <div class="content_list__item__delete"><a href="{% url 'object-delete' %}?obj_id={{object.id}}">удалить</a></div>
+                    <div class="content_list__item__delete"><a class="body-link" href="{% url 'object-delete' %}?obj_id={{object.id}}">удалить</a></div>
                 </div>
                 {% endfor %}
             </div>
