--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,8 @@
 body {
-    font-family: 'Ubuntu';
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: 300;
     margin: auto;
-        }
+    }
 
 .background {
     width: 1200px;
@@ -11,46 +12,59 @@ body {
 }
 
 .head__item {
-    color: #012601;
     display: inline-block;
-    font-size: 20px;
+    font-size: 24px;
     padding: 20px;
     margin-top: auto;
-    margin-left: 30px;
+    margin-left: -6px;
     margin-right: 30px;
+    color: white;
+    }
+
+.head-link {
+    color: white;
+}
+
+.body-link {
+    color: black;
     }
 
 .user {
     background-color: #797e79;
+    color: black;
     }
 
+.user:hover {
+    color:white;
+}
+
 .head {
-    background-color: #034A02;
+    background-color: #769276;
     text-align: center;
     display: flex;
-    margin-bottom: 40px
+    flex-wrap: wrap;
+    margin-bottom: 40px;
 }
 
 .head-items {
-    margin-left: 500px
+    margin-left: 500px;
+    color: black;
 }
 
 .logo {
     margin-left: 50px;
-    font-size: 30px;
+    font-size: 42px;
     margin-top: auto;
     margin-bottom: auto;
 }
 
-a {
-color: black;
-text-decoration: none
-}
-a:hover {
-color: grey
-}
+.logo {}
 
-.head__item_chosen {font-weight: bold}
+a {text-decoration: none;color: black;}
+
+a:hover {
+color: black;
+}
 
 
 .content_list__item {
