--- a/checks/templates/checks/index.html
+++ b/checks/templates/checks/index.html
@@ -34,10 +34,37 @@
                         {% endif %}</div>
 	            </div>
             </div>
-				
             {% endblock %}
 		<div class=background>
             {% block content %}
+            <div class="start-page-information">
+                <div class="start-page-information-card">
+                    <div class="start-page-information-card__description">Всего проведено проверок в 2022 году</div>
+                    <div class="start-page-information-card__value">118</div>
+                </div>
+                <div class="start-page-information-card">
+                    <div class="start-page-information-card__description">Количество неудовлетворительных оценок</div>
+                    <div class="start-page-information-card__value">25</div>
+                </div>
+                <div class="start-page-information-card">
+                    <div class="start-page-information-card__description">Средний балл за проверку</div>
+                    <div class="start-page-information-card__value">88</div>
+                </div>
+            </div>
+            <div class="start-page-rating">
+                <div class="start-page-rating-card">
+                    <div class="start-page-rating-card__description">Самый лучший результат</div>
+                    <div class="start-page-rating-card__value">90 баллов</div>
+                    <div class="start-page-rating-card__object">Школа № 1 Краснознаменский район</div>
+                </div>
+                <div class="start-page-rating-card">
+                    <div class="start-page-rating-card__description">Самый худший результат</div>
+                    <div class="start-page-rating-card__value">65 баллов</div>
+                    <div class="start-page-rating-card__object">Школа № 8 Балтийский ГО</div>
+                </div>
+            </div>
+        </div>
+
             {% endblock %}
             </div>
 	</body>
