--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,7 +8,9 @@ body {
     width: 1200px;
     background-color: white;
     margin-left: 100px;
-    margin-right: auto
+    margin-right: auto;
+    display: flex;
+    flex-direction: column;
 }
 
 .head__item {
@@ -172,4 +174,79 @@ color: black;
 
 ul {
     list-style-type: none;
+}
+
+.start-page-information {
+    display: flex;
+    }
+
+.start-page-information-card {
+    width: 33%;
+    height: 300px;
+    background-color: #d3e2d4;
+    padding: 2%;
+    text-align: center;
+    box-sizing: border-box;
+    box-shadow: 0 1em 1em -0.7em;
+}
+
+.start-page-information-card:nth-child(n+2) {
+    margin-left: 1.5%;
+}
+
+.start-page-information-card__description {
+    font-size: 25px;
+    display: block;
+    block-sizing: border-box;
+    height: 100px;
+    width: 100%;
+}
+
+.start-page-information-card__value {
+    margin-top: 25px;
+    font-size: 70px;
+    }
+
+.start-page-rating {
+    display: flex;
+    flex-direction: column;
+    margin-top: 30px;
+}
+
+.start-page-rating-card {
+    width: 100%;
+    height: 300px;
+    background-color: #d3e2d4;
+    padding: 2%;
+    text-align: center;
+    box-sizing: border-box;
+    box-shadow: 0 1em 1em -0.7em;
+}
+
+.start-page-rating-card:nth-child(1) {
+    margin-bottom: 30px;
+}
+
+.start-page-rating-card__description {
+    font-size: 25px;
+    display: block;
+    block-sizing: border-box;
+    height: 20%;
+    width: 100%;
+}
+
+.start-page-rating-card__value {
+    font-size: 70px;
+    display: block;
+    block-sizing: border-box;
+    height: 50%;
+    width: 100%;
+}
+
+.start-page-rating-card__object {
+    font-size: 25px;
+    display: block;
+    block-sizing: border-box;
+    height: 30%;
+    width: 100%;
 }
