--- a/checks/templates/checks/control_event_result.html
+++ b/checks/templates/checks/control_event_result.html
@@ -29,4 +29,5 @@
                                                 
                                 </ul>
                 </div>
+            <a href="{% url 'download_check_list' control_event_id %}">Tset_Load</a>
 {% endblock %}
