--- a/checks/templates/checks/control_event_result.html
+++ b/checks/templates/checks/control_event_result.html
@@ -2,20 +2,16 @@
 {% load static %}
 {% block content %}
     <div class="check_list">
-                <div class="check_list__information">
-                    <div class="check_list__information__object">
-                        {{object}}
-                    </div>
-                    <div class="check_list__information__object">
-                        {{date}}
-                    </div>
-                </div>
+        <div class="check_list__information">
+            <div class="check_list__information__object">{{object}}</div>
+            <div class="check_list__information__object">{{date}}</div>
+        </div>
                 {% for r in result %}
                 <div class="check_list__position">
                     <div class="check_list__position__question">{{r.question}}</div>
                     <div class="check_list__position__grade">{{r.grade}}</div>
                     <div class="check_list__position__delete"><a href="{% url 'delete-check-list-position' %}?control_event_position_id={{r.id}}&control_event_id={{control_event_id}}">[X]</a> </div>
-                    </div>
+                </div>
                 {% endfor %}
                 <form class="check-list-form" action="{% url 'control-event' control_event_id %}" method="post">
                         {% csrf_token %}
@@ -23,11 +19,16 @@
                     <input type="submit" value="Добавить">
                 </form>
             </div>
-                <div class="common-information">
-                                <ul>
-                                                <li>Количество баллов: {{score}}</li>
-                                                
-                                </ul>
-                </div>
-            <a href="{% url 'download_check_list' control_event_id %}">Tset_Load</a>
+        <aside class="right_column">
+            <div class="right_column__common-information">Количество баллов: {{score}}</div>
+            <a class="right-column__download-check-list" href="{% url 'download_check_list' control_event_id %}">
+                <img src="https://img.icons8.com/ios/50/000000/download--v1.png"/>
+                <span class="right-column__download-check-list__title">Загрузить чек-лист</span>
+            </a>
+        </aside>
+
+
+
+
+
 {% endblock %}
