--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Source Sans Pro', sans-serif;
     font-weight: 300;
+    font-size: 20px;
     margin: auto;
     }
 
@@ -216,7 +217,7 @@ ul {
     padding: 2%;
     text-align: center;
     box-sizing: border-box;
-    box-shadow: 0 1em 1em -0.7em;
+    /* box-shadow: 0 1em 1em -0.7em; */
 }
 
 .start-page-information-card:nth-child(n+2) {
@@ -249,7 +250,7 @@ ul {
     padding: 2%;
     text-align: center;
     box-sizing: border-box;
-    box-shadow: 0 1em 1em -0.7em;
+    /* box-shadow: 0 1em 1em -0.7em; */
 }
 
 .start-page-rating-card:nth-child(1) {
