--- a/checks/templates/checks/create_object.html
+++ b/checks/templates/checks/create_object.html
@@ -1,7 +1,7 @@
 
 {% extends "checks/index.html" %}
 {% load static %}
-{% block content %}
+{% block main %}
             <form class="create__location" action="{% url 'object-create' %}" method="post">{% csrf_token %}
                     {{ form }}<br>
         <input type="submit" value="Добавить">
