--- a/checks/templates/checks/object.html
+++ b/checks/templates/checks/object.html
@@ -2,7 +2,7 @@
 
 {% extends "checks/index.html" %}
 {% load static %}
-{% block content %}
+{% block main %}
 <div class="add_item"><a href="{% url 'object-create' %}">Добавить объект</a></div>
             <div class="content_list">
                 {% for object in objects %}
