--- a/checks/templates/checks/control_event_create.html
+++ b/checks/templates/checks/control_event_create.html
@@ -1,6 +1,6 @@
 {% extends "checks/index.html" %}
 {% load static %}
-{% block content %}
+{% block main %}
     <form class="create__location" action="{% url 'control-event-create' %}" method="post">
                 {% csrf_token %}
                 {{ control_event_form }}<br>
