--- a/checks/templates/checks/location.html
+++ b/checks/templates/checks/location.html
@@ -2,7 +2,7 @@
 
 {% extends "checks/index.html" %}
 {% load static %}
-{% block content %}
+{% block main %}
     <div class="add_item"><a href="{% url 'location-create' %}">Добавить муниципалитет</a></div>
     <div class="content_list">
         {% for location in locations %}
