--- a/checks/templates/checks/object_page.html
+++ b/checks/templates/checks/object_page.html
@@ -2,7 +2,7 @@
 
 {% extends "checks/index.html" %}
 {% load static %}
-{% block content %}
+{% block main %}
 <h1>{{ object.name }} ({{object.location}})</h1>
 <h2>Общая информация</h2>
 Количество проверок на объекте: {{information.count_control_events}}<br>
