--- a/checks/templates/checks/control_event_result.html
+++ b/checks/templates/checks/control_event_result.html
@@ -21,7 +21,18 @@
             </div>
 {% endblock %}
 {% block aside %}
-        <div class="right_column__common-information"><span class="score">{{score}}</span> баллов </div>
+        <div class="right_column__common-information">
+            <div class="right_column__common-information__description">Общий результат (баллы)</div>
+            <div class="right_column__common-information__result"><span class="score">{{score}} {{status}}</span></div>
+        </div>
+        <div class="right_column__common-information">
+            <div class="right_column__common-information__description">Результат управляющего (баллы)</div>
+            <div class="right_column__common-information__result"><span class="score">{{manager_responsibility}}</span></div>
+        </div>
+        <div class="right_column__common-information">
+            <div class="right_column__common-information__description">Результат управляющего по производству (баллы)</div>
+            <div class="right_column__common-information__result"><span class="score">{{production_responsibility}}</span></div>
+        </div>
                 <a class="right-column__download-check-list" href="{% url 'download_check_list' control_event_id %}">
                     <img src="https://img.icons8.com/ios/50/000000/download--v1.png"/>
                     <span class="right-column__download-check-list__title">Загрузить чек-лист</span>
