--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,7 +20,8 @@ main {
 
 aside {
     padding-left: 30px;
-    min-width: 200px;
+    min-width: 280px;
+    margin-top: 120px;
 }
 
 .background {
@@ -213,16 +214,28 @@ option {
 }
 
 .right_column__common-information {
+    display: flex;
     font-size: 1em;
     background-color: #99a99a45;
     width: 100%;
-    height: 75px;
+    height: 100px;
     text-align: center;
     padding: 15px;
-    margin-top: 120px;
     margin-bottom: 15px;
     box-sizing: border-box;
+    align-items: center;
     }
+
+.right_column__common-information__description {
+    width: 70%;
+    font-size: 100%;
+}
+
+.right_column__common-information__result {
+    width: 30%;
+    vertical: center;
+}
+
 
 .right-column__download-check-list {
     background-color: #99a99a45;
